Start single page app for front end.

--- a/internal/spa/src/srv/index.html
+++ b/internal/spa/src/srv/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <title>Form Lark</title>
+  
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/bulma.css">
   <link rel="stylesheet" href="assets/css/app.css">
 </head>
 
